[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.mypy]
python_version = "3.11"
show_error_codes = true
ignore_missing_imports = true
strict_equality = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unreachable = true
pretty = true
show_absolute_path = true
show_error_context = true
disallow_untyped_calls = false
exclude = ["tests/", "build/", ".ruff_cache/", ".mypy_cache/", "references/"]
explicit_package_bases = true


[tool.ruff]
target-version = "py311"
lint.unfixable = ["F841"]
lint.select = [
  "B007",
  "B014",
  "B006",
  "C",
  "D",
  "E",
  "F",
  "I",
  "PL",
  "RUF",
  "FA",
  "TID",
  "SLF",
  "SIM",
  "ICN001",
  "PGH004",
  "PLC0414",
  "RET",
  "S",
  "T20",
  "TRY",
  "UP",
  "W",
]
lint.ignore = [
  "D202",
  "D203",
  "D404",
  "D212",
  "D406",
  "D407",
  "E731",
  "TRY003",
  "TRY301",
  "PLR2004",
  "PLR0913",
  "PLR0912",
  "PLR0915",
  "PLR0911",
  "S301",
  "W191",
  "E111",
  "E114",
  "E117",
  "D206",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",
  "E501",
  "TRY400",
]
line-length = 115
lint.extend-safe-fixes = ["UP006"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.codespell]
skip = "./.*,*.csv,*.json,*.html,*.aspx"
count = ""
quiet-level = 2
ignore-words-list = "hass,alot,datas,dof,dur,farenheit,hist,iff,ines,ist,lightsensor,mut,nd,pres,referer,ser,serie,te,technik,ue,uint,visability,wan,wanna,withing,windo"
